--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A microservice project",
   "main": "src/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "deploy": "echo \"Deploying the microservice...\""
   },
   "repository": {
@@ -21,6 +21,7 @@
     "express": "^4.17.1"
   },
   "devDependencies": {
-    "jest": "^26.6.0"
+    "jest": "^26.6.0",
+    "supertest": "^6.0.0"
   }
 }
