--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "src/index.js",
   "scripts": {
     "test": "jest",
+    "lint": "eslint .",
     "deploy": "echo \"Deploying the microservice...\""
   },
   "repository": {
@@ -22,6 +23,7 @@
   },
   "devDependencies": {
     "jest": "^26.6.0",
-    "supertest": "^6.0.0"
+    "supertest": "^6.0.0",
+    "eslint": "^7.32.0"
   }
 }
