--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -17,3 +17,5 @@ jobs:
         uses: softprops/action-gh-release@v1
         with:
           generate_release_notes: true
+        env:
+          GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
