--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "A microservice project",
   "main": "src/index.js",
   "scripts": {
+    "start": "node src/index.js",
     "test": "jest",
     "lint": "eslint .",
     "deploy": "echo \"Deploying the microservice...\""
@@ -19,6 +20,7 @@
   "author": "Your Name",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^16.5.0",
     "express": "^4.17.1"
   },
   "devDependencies": {
