--- a/.github/workflows/audit.yml
+++ b/.github/workflows/audit.yml
@@ -2,7 +2,7 @@ name: Dependency Audit
 
 on:
   schedule:
-    - cron: '0 0 * * 0' # Runs weekly on Sunday
+    - cron: "0 0 * * 0" # Runs weekly on Sunday
   workflow_dispatch:
 
 jobs:
@@ -12,7 +12,7 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v2
         with:
-          node-version: '14'
+          node-version: "14"
       - run: npm install
       - run: npm audit --audit-level=high
       - name: Upload audit report
