--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "devDependencies": {
     "eslint": "^7.32.0",
     "jest": "^29.7.0",
+    "prettier": "^3.5.3",
     "supertest": "^6.0.0"
   }
 }
