--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "start": "node src/index.js",
     "test": "jest",
     "lint": "eslint .",
-    "deploy": "echo \"Deploying the microservice...\""
+    "deploy": "echo \"Deploying the microservice...\"",
+    "biome:check": "biome check .",
+    "biome:format": "biome format ."
   },
   "repository": {
     "type": "git",
@@ -28,5 +30,6 @@
     "jest": "^29.7.0",
     "prettier": "^3.5.3",
     "supertest": "^6.0.0"
-  }
+  },
+  "proxy": "http://localhost:3000"
 }
