Auto-fix formatting and lint issues with Prettier and ESLint

--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -16,3 +16,8 @@ jobs:
           node-version: "14"
       - run: npm install
       - run: npx eslint .
+      - name: Lint client
+        run: |
+          cd client
+          npm install
+          npx eslint .
