--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "express": "^4.17.1"
   },
   "devDependencies": {
-    "eslint": "^7.32.0",
+    "eslint": "^8.57.1",
+    "eslint-config-react-app": "^7.0.1",
     "jest": "^29.7.0",
     "prettier": "^3.5.3",
     "supertest": "^6.0.0"
